# synthrln

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  Makefile  Makefile.dos  README.md  synthrln.cfg.example
.github/workflows/: build.yml  codeql.yml
docs/: BUILDING_DOS.md
src/: bbs_fossil.c  bbs_io.h  bbs_local.c  bbs_posix.c  config.c  config.h  dropfile.c  dropfile.h  main.c  net_io.h  net_mtcp.c  net_mtcp_wrap.cpp  net_posix.c  synthrln.h
